微习惯 读书打卡

--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -65,3 +65,32 @@
 
 比如每日读书1页的习惯
 
+
+
+**我很确定我喜欢编程，而且我后半辈子还要大量编程（像Jeff Dean一样），所以我愿意把编程的习惯融入我的性格中（阅读和锻炼也是如此）**
+
+
+
+### 决策时刻
+
+人们在做决策时有两种思维状态。一种是权衡各种选择的状态，叫慎重心态；
+
+另一种是决定行动的心态，叫执行心态。
+
+什么是执行意向？指提前对自己将在何时和如何做某件事做出决定，而依据正是它的关键因素。
+
+执行意向能提升目标的成功率。
+
+
+
+微习惯因为小到不可能失败（比如每天一个俯卧撑），根本不需要和懒惰对抗，直接绕过意志力的消耗阶段，轻松养成长期行为。
+
+用“小到不需要消耗意志力”的行动，骗过大脑的抵抗机制。
+
+
+
+**重点：**
+
+如果发现自己停滞不前，一定要提醒自己，其实你的任务是很微小的，想简单点，不要想的太难。
+
+把你给每个微习惯挑选的依据都写下来。我喜欢把我的全部依据都放在“一天一次，随时可做”的保护伞下，这会让事情变的简单。
