1、dpvs任务调度.md 2、微习惯.md

--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -94,3 +94,29 @@
 如果发现自己停滞不前，一定要提醒自己，其实你的任务是很微小的，想简单点，不要想的太难。
 
 把你给每个微习惯挑选的依据都写下来。我喜欢把我的全部依据都放在“一天一次，随时可做”的保护伞下，这会让事情变的简单。
+
+## 第四步：建立回报机制，以奖励提升成就感
+
+回报关联
+
+刚开始时，我们将行为和完全不相关的回报建立关联，一段时间后，大脑就会把这个行为和回报联系起来，这就是我们想要的！这之后，大脑就不需要这个关联回报来促进行动了。
+
+
+
+大笑是给大脑的有创意的回报，大笑会释放出让人心情变好的化学物质。所以平时多看下搞笑视频，这是在科学的训练大脑。
+
+
+
+建立习惯的诀窍就是把它想象成教娃娃骑自行车。
+
+刚开始时，你扶着他稳稳的前行；
+
+可是当你不经意间把手松开后，孩子依旧可以骑车。
+
+刚开始我会在锻炼后给大脑额外一个回报，但是最终满足感和内啡肽就足以让大脑自己维持这个行为了。
+
+
+
+如果你想更加幸福，享受成就感是让自己对生活满意的最有效的策略。这可是对微习惯的鼎力支持，
+
+因为微习惯正建立在享受和巧用微小成就感的基础上。
