--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -97,7 +97,7 @@
 
 ## 第四步：建立回报机制，以奖励提升成就感
 
-回报关联
+### 1）回报关联
 
 刚开始时，我们将行为和完全不相关的回报建立关联，一段时间后，大脑就会把这个行为和回报联系起来，这就是我们想要的！这之后，大脑就不需要这个关联回报来促进行动了。
 
@@ -120,3 +120,51 @@
 如果你想更加幸福，享受成就感是让自己对生活满意的最有效的策略。这可是对微习惯的鼎力支持，
 
 因为微习惯正建立在享受和巧用微小成就感的基础上。
+
+
+
+### 2）回报策略
+
+微习惯提供的满足感比传统习惯的更加强烈，因为我不仅完成了目标，而且我还超额完成了目标，这种心情是很nice的。
+
+可以想下好好奖励下自己，以鼓励下超额完成的行为。
+
+
+
+我们还要学会爱上延迟满足的感觉，他能对你进行抑制，让你不至于现在就去兑现小回报。
+
+下面是最好玩的：
+
+我的经验法则是在此过程中要让自己感受到快乐。快坚持不下去的时候，我就会给自己一点奖励，休息一下。
+
+
+
+### 3）回报对意志力的重建作用
+
+回报能通过激励我们继续行动、帮我们恢复意志力来让我们坚持良好的微习惯。
+
+
+
+## 第五步：记录和追踪完成情况
+
+当你想到某件事时，立马写下来，意味着它比其他事情更加重要。
+
+研究表明，把想法写在纸上时，会让其在大脑中更加突出，而打字不具备同样的效果。
+
+一定要手写，将其重要性方法。
+
+
+
+不管你选择什么策略，我建议你到睡前再检查一遍自己是否成功。
+
+养成睡前检查的好习惯，不容易忘记。
+
+### 1）大日历（推荐）
+
+把微习惯写在旁边的一个白板上，然后每天在日历上校对是否完成（除每周3次健身）。
+
+与在电脑上记录相比，用纸笔打钩能让你的成就感更加真实。
+
+此外，如果把大日历放在你经常看到的显眼的位置上，会让你对自己微习惯、进度和成功与否更敏感。
+
+别低估了这个方法的效果！！！
