1、微习惯.md 读书笔记 2、发布博客内容

--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -168,3 +168,51 @@
 此外，如果把大日历放在你经常看到的显眼的位置上，会让你对自己微习惯、进度和成功与否更敏感。
 
 别低估了这个方法的效果！！！
+
+
+
+### 2）数字化追踪
+
+todo清单
+
+不要设置模糊不清的目标，含糊的目标无法衡量，就不能给你像“我成功了”或者“我失败了”这样具体的反馈。
+
+具体反馈对加强行为来说非常关键。
+
+一定要让你的微习惯非常具体和微小。
+
+还可以设置一些组合计划，组合计划主要是为了增加趣味性，比如“肌肉码农”就包括以下
+
+- 做一个仰卧起坐
+- 编写代码1行
+- 阅读1段文字
+
+
+
+## 第六步：微量开始，超额完成
+
+意志力的优点是它可以得到强化。非常自律的人是指那些已经强化了自己意志力的人。
+
+在建立习惯的道路上，我们想做三件事：
+
+- 强化我们的意志力
+- 当下就取得进步
+- 不耗尽意志力
+
+
+
+### 强化意志力的微习惯
+
+微习惯的原理：我们给自己制定意志力要求较低但是频率很高的任务。
+
+完成1个俯卧撑只需要非常少量的意志力，久而久之，就这样反复不断的强迫自己执行可实现的任务，我们的意志力就会变的强大。这就叫练习。
+
+
+
+### 带来进步的微习惯（TODO:）
+
+
+
+思考：
+
+如何强化意志力呢？
