dpdk收包功能的封装.md

--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -209,10 +209,32 @@ todo清单
 
 
 
-### 带来进步的微习惯（TODO:）
+### 带来进步的微习惯
+
+每天只做一个俯卧撑会有实打实的成效吗？
+
+#### A、微习惯超额环节
+
+我的每一个微习惯，我几乎都是超额完成的！！！
+
+“几乎”是指超过90%的情况，“超额”是指超出很多。
+
+一般人在完成“只做一个俯卧撑”的微习惯的目标后，心里还是希望在此基础上多完成一些。
+
+#### B、微习惯安全网（培养实实在在的微习惯）
+
+虽然微习惯的目标很小，但是它并没有给你设置上限，比如你设置每天写50字，如果你能每天写5000字，然后第二天依旧可以正常工作，就没有问题。
+
+或者说，先培养每天完成50字的习惯，当这个习惯稳固后，在此基础上，继续培养每天200字的习惯，这样要轻松的多。
 
 
 
-思考：
+微习惯就是星星，星星之火可以燎原，微习惯不会阻碍你进步，反而会一步步引导你进步。
 
-如何强化意志力呢？
+应用微习惯后，我能从一开始就获得强大的动力。
+
+
+
+### 减轻意志力损耗的微习惯
+
+让微习惯脱颖而出的是，你没有失败的借口，绝不会害怕失败，而且绝不会感到内疚。
