2025-04-24 微习惯.md 读书笔记

--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -238,3 +238,38 @@ todo清单
 ### 减轻意志力损耗的微习惯
 
 让微习惯脱颖而出的是，你没有失败的借口，绝不会害怕失败，而且绝不会感到内疚。
+
+
+
+## 第七步：服从计划安排，摆脱高期待值
+
+在实践过程中，你遇到的第一个问题是，
+
+一定要提醒自己，你每天的目标并没有改变，还是每天50字的读书量，这一点很重要。
+
+我们要把期待值和精力放到坚持目标上，而不是对任务量抱有较高的期待上。
+
+坚持是让行为转变为习惯的唯一路径，然后你和大脑从对抗关系变成合作关系了。
+
+
+
+## 第八步：留意习惯养成的标志
+
+代表行为已经成为习惯的标志：
+
+- 没有抵触情绪，做起来很容易
+- 可以信心十足的说，我是编码专家，我天天都锻炼。
+- 行动时无需考虑，是很自然的行为
+- 常态化，不担心忘记做，你会一直做，就像喝水吃饭一样，不会很激动也没有那么多激情，但就是能天天坚持。
+
+
+
+警告：对超额完成任务的态度
+
+从小事开始和消除期待值带来的压力是我们取得成功的秘诀，而且效果很好。
+
+
+
+如果今天你超额完成了目标，那你很了不起，如果只是完成了最低目标，你还是很了不起。
+
+不只是“好”，而是“了不起”。
