第八章 微习惯养成过程中的一些注意事情

--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -273,3 +273,19 @@ todo清单
 如果今天你超额完成了目标，那你很了不起，如果只是完成了最低目标，你还是很了不起。
 
 不只是“好”，而是“了不起”。
+
+
+
+# 第七章 微习惯策略的八大原则
+
+如果你发现自己用微习惯很难取得进步，可能是你违背了其中一条原则：
+
+## 1、绝不要自欺欺人
+
+比如制订的微习惯是每天做一个俯卧撑，但是却偷偷的要求自己完成不止一个俯卧撑。
+
+请一定不要调高期待值，期待值低一些，你就会渴望多完成一些。
+
+采用微习惯策略后，你每次都能完成，所以你很少体会到失望。
+
+一旦你意识到开始的力量有多强大，你就会有充足的动力一直做下去，那么生活会变的非常有趣。
