保持每日读书的习惯

--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -289,3 +289,30 @@ todo清单
 采用微习惯策略后，你每次都能完成，所以你很少体会到失望。
 
 一旦你意识到开始的力量有多强大，你就会有充足的动力一直做下去，那么生活会变的非常有趣。
+
+
+
+## 2、满意每一个小进步
+
+李小龙名言，“要满意，别满足。”
+
+很多梦想因为害怕，因为怕丢人，或者因为信心不足而迟迟无法迈开第一步，就是缺少敢于迈出第一步的勇气。
+
+微习惯能帮我很好的迈出这第一步开始跳舞，然后心底的梦想和激情也会冲上舞台来一起摇摆起来。
+
+所以当完成一个微习惯后，给他加油打气吧，因为每次鼓励他，都能一点点激活你内心的勇气，让你能做对更多的事情。
+
+
+
+## 3、经常回报自己，尤其在完成微习惯之后
+
+当你完成一个微习惯后回报自己的时候，任何自己想得到的奖励都可以，这种回报会激励你再次执行微习惯，它会通过这种方式奖励你。最终，你会建立一个正反馈循环。
+
+在完成任务后，给自己一些奖励，可能会帮助你坚持下去。
+
+万事开头难，在习惯养成的早期阶段也是如此。但是在长期坚持做这些事情后，最终会拥有强壮、健康的身体和几部完整的小说。
+
+
+
+## 4、保持头脑清醒
+
