每日微习惯打卡

--- a/每日读书/微习惯.md
+++ b/每日读书/微习惯.md
@@ -316,3 +316,62 @@ todo清单
 
 ## 4、保持头脑清醒
 
+冷静的头脑是建立习惯的最佳思维模式，因为任何冲动都是不持久的。
+
+当我们把习惯当成刷牙、洗脸、睡觉一样习以为常的平淡时，就能长期坚持一件事了。
+
+而不是靠一时的激情或者依赖内心的动力。
+
+
+
+## 5、当你感到强烈抵触时，不断缩小目标，直到抵触感最轻
+
+### 5、1 启动阶段
+
+比如你打算去锻炼，但是大脑和内心却不希望这么做。
+
+你需要的不是和大脑去对抗，而是缩小任务的目标，从去锻炼改为先从公司下楼去健身房的路上，如果一个任务听起来很傻，就意味着你已经骗过大脑了。
+
+等你的大脑反应过来时，你已经来到了健身房并开始锻炼了。
+
+
+
+### 5、2 精疲力竭的咬牙阶段
+
+当你精疲力竭坚持不下去时，可以向大脑发出请求，“我们能不能再做一个俯卧撑？”
+
+因为只是一个俯卧撑，大脑会觉得不值得一提，顺带着就做了。
+
+做完之后，你也许就有动力多做几个了。
+
+
+
+很好的一句话：
+
+任何伟大的成就都是由非常微小的步骤组成的，而且一次完成一个步骤并不是弱小，而是精确的想前推进。
+
+
+
+## 6、不断提醒自己这件事很轻松
+
+当你不断的提醒自己和大脑：
+
+**这件事很轻松！**
+
+**这件事很轻松！**
+
+**这件事很轻松！**
+
+那么这件事就会变的很轻松。
+
+事情还是那件事情，你觉得它轻松它就轻松一些，你内心觉得它困难它就困难一些。
+
+微习惯门槛非常低，你永远不会失败，就意味着你容易赢得胜利。
+
+
+
+坚持自己一直想坚持的事情：
+
+**不，你知道吗？写代码并不难，非常容易。**
+
+**我现在就能打开编辑器，写1行代码，这真的特别特别容易，太容易了。每天我都能做到。**
