65种微习惯.md 之 10到24种微习惯

--- a/每日读书/65种微习惯.md
+++ b/每日读书/65种微习惯.md
@@ -89,3 +89,192 @@
 得到同行或朋友们的赞扬，这样能提升我继续下去的积极性。
 
 ”想被别人表扬，想得到别人的认可“，这种想法是人类的根本需求。
+
+
+
+# 方法11：提升干劲的小装备
+
+你提升干劲的小装备是什么？
+
+## 1、降噪耳机
+
+有效隔绝周边的噪声，能让我心无旁骛不受干扰的进入心流来工作。
+
+
+
+## 2、番茄时钟和计时器
+
+番茄时钟和计时器，能让我在25-35分钟之间集中注意力到手头工作的内容上，不分心。
+
+
+
+# 方法12：制订带附加条件的计划
+
+比如计划：我要在每天午餐后，写1行代码，这个计划就是带附加条件的计划。
+
+通过明确“什么时候开始做（午餐后）”“做到什么时候为止（一行即可）”，因为设置了明确的行动时间节点，大脑接收到的信息就更加具体形象。
+
+
+
+你给自己设置的时间节点有哪些？
+
+1、在每天午餐后，写一行代码
+
+2、每天到公司后，读1页书
+
+3、每天晚上睡觉前，和女儿一起蹲马步
+
+4、每天下班前，更新今日的早中晚餐记录
+
+5、整理并发表博客内容（这个没设置时间节点，所以执行过程中效果略差）
+
+
+
+# 方法13：向大家宣布，断绝自己的后路
+
+几乎所有人都希望给别人留下好印象，起码不愿意被人当成说话不算数的人。
+
+
+
+# 方法14：设置一个“激情目标”
+
+我要成为软件领域动手能力强，独立完成一个项目的人，从需求分析、架构设计、技术架构、业务架构等，
+
+我要把我10年的网络安全经验都形成一个练手项目，一个基于dpdk的网络入侵检测的开源项目。
+
+学习的目的性要强，学习开源项目，是为了做我自己的项目；
+
+不会的技术点就尝试先写demo，写demo会让自己掌握这块的知识点，利用知识点再实现自己项目中的功能模块。
+
+
+
+# 方法15：“年卡式”习惯养成法：要是“不想吃亏”， 就坚持下去
+
+我们有时下定了做某件事的决心，但是依然不能长期的坚持下去。
+
+“不想吃亏“是普通人常有的心理。当你投资了金钱之后，要想不吃亏，就要拿出成果来。
+
+比如花费了2000元去报名了”减肥训练营“，钱是退不回来了，所以必须咬牙把课程学完，不能让钱亏了。
+
+
+
+# 方法16：我想成为那样的人
+
+# 方法17：”一小时“习惯养成法：起床后的黄金一小时
+
+我喜欢在早上花15分钟读书
+
+我喜欢在早上花15分钟制订计划
+
+我喜欢在早上花一个小时锻炼身体
+
+喜欢在早上花20分钟进行冥想
+
+
+
+到了办公室后在开启一天工作之前，我会先制订今日工作计划，把自己的情绪调动起来，让大脑活跃起来，然后才开始一天的工作。
+
+
+
+# 方法18：学会”一心二用“
+
+尝试”一心二用“的最佳时机是什么时候呢？
+
+走路时，吃饭时，等待时等等。
+
+比如边听歌边运动，开车路上听英语音频，在公交车或地铁中看电子书等
+
+晚上一边洗脚，一边看脱口秀或者郭德纲相声。
+
+
+
+好处就是生活和学习、娱乐两不误。
+
+
+
+# 方法19：”氛围式“习惯养成法：寻找一个让你心情舒畅的场所
+
+我喜欢去家附近的自习室去学习，很多人在里面学习，也更加有氛围；
+
+我喜欢去家附近的茶馆去看书，去思考一些问题，去听听视频放松一下。
+
+
+
+# 方法20：倒推”热情递减法则“，激活积极大脑
+
+
+
+# 方法21：克服拖延：以15（或25）分钟为一个单位
+
+把时间分段，高效利用一段段的时间，15分钟是一个让我们的行动产生魔力的时间单位。
+
+比如我要放松15分钟。
+
+
+
+**首先，以15分钟为单位，就需要将工作内容拆分，复杂的拆分为多个相对简单的步骤，**
+
+**每个步骤实现起来的难度会降低，更容易实现它；**
+
+
+
+**其次，将工作上手头的事情拆分为以15分钟为单位进行分割，逐一攻破。设置了时间后，就会产生一种紧张感，处理事情时也比较高效。**
+
+
+
+**最后，15分钟更像是短跑，开足马力的短跑，每次全力跑15分钟，然后休息3分钟，然后继续全力跑，这样张弛有度，项目完成的效果更好些。**
+
+
+
+# 方法22：克服拖延：列一个清单，做完一项就勾掉一项
+
+**你是否遇到过以下情况：**
+
+- 这个事也想做，那个事也想做，搞的自己在多个事之间不停切换，最后哪个事情都没做好；
+- 昨天状态不佳有几件重要的事情没做完，今天这几件事一直在我脑海中萦绕，导致不能集中注意力做今天的工作，效率低下。
+
+将事情一直记忆在脑子里，就相当于在电脑中开了后台任务，它会悄悄的消耗你的cpu和内存，并且还会时不时的弹出个弹窗来干扰下你手头上正在做的工作。
+
+
+
+**正确做法：**
+
+将上述事情从大脑中清空，然后将其写道一个”可视化清单“上，这样你自然能释放内心的压力，做完上面一项就把它勾掉，代表此事已经完毕，无需再考虑它了。
+
+
+
+**好处：**
+
+当你勾掉已经完成的任务时，成就感和喜悦感就会一下子涌上心头，你会更有干劲：”好样的，我要继续做下一项内容“！！！！
+
+# 方法23：克服拖延：把工作细分
+
+分解你的工作，逐一突破，因为人在面对全部工作量时，会产生”心情沉重“”可能会失败“的情绪，当你把工作拆分的细致后，当你面对一个个细小的任务时，就不会感到压力山大了，哈哈哈！！！！
+
+
+
+将大问题拆分为一个个的小问题，然后小问题再拆分为一个个具体可行的步骤和交付成果，然后我就专注在每一个需要解决的小问题，尝试使用具体可行的步骤去实践，遇到问题就解决问题；
+
+在解决了一个个小问题后，由众多小问题组成的大问题也就迎刃而解了。
+
+
+
+# 方法24：克服拖延：聚焦具体事项
+
+如果有了明确的行动计划，你就容易行动起来
+
+重点在于集中注意力彻底理清行动的重点。
+
+PDCA工作法包括四个步骤——计划（Plan）、行动（Do）、检查（Check）、改善（Action），那么你就要明确自己从哪个步骤切入。
+
+**具体做法：**
+
+上班后，写下今天需要做的事情，排列好顺序后开始工作。
+
+聚焦具体的事项，这样很容易坚持下去。
+
+
+
+# 方法25：克服拖延：停止情绪内耗 ，干就完了
+
+TODO:这个留给5月3号来做。
