每日读书微习惯

--- a/每日读书/65种微习惯.md
+++ b/每日读书/65种微习惯.md
@@ -472,3 +472,34 @@ https://github.com/mozillazg/ptcpdump
 既然选择了做一个编程实战能力卓越的高手，那么你为什么不尝试直播编码呢？这种是很大的考验。
 
 搞起来，少年，搞起来！！！
+
+
+
+## 方法39：故事思维：那些被感动的能力
+
+当我们处于困境或者沮丧时，多想想自己觉得牛逼的人是面对同样的困境时是如何做的。多想想身边认识的牛逼人会如何处理这件事。他们都会成为自己的精神食粮。
+
+
+
+## 方法40：给做的事情赋予意义
+
+同一件事换一个角度来看待，立马就不同了。
+
+比如我是个研发人员，领导让我去写架构设计文档。
+
+错误思想：我的专职工作是写代码，文档对我来说是浪费时间
+
+正确思想：虽然我现在是程序员，但是编写文档的能力是程序员进阶到架构是的必备技能，领导把文档编写安排给我，正好我可以锻炼下这块的能力。
+
+
+
+## 方法41：联想思维：想一想之前的成功经验
+
+2024年到2025年，我花费了一年多的时间减肥成功。
+
+今年在公司工作中遇到各种难题的时候，我都能联想到减肥过程中吃的各种苦，起早去锻炼，摸黑去锻炼，天天锻炼的浑身疼。
+
+这么困难的事情都做成了，当我做其他事时，我也有充足的信心能够克服它。
+
+我相信我自己行，不是自大，而是基于之前的成功经验而来的。
+
