每日读书/65种微习惯.md

--- a/每日读书/65种微习惯.md
+++ b/每日读书/65种微习惯.md
@@ -503,3 +503,39 @@ https://github.com/mozillazg/ptcpdump
 
 我相信我自己行，不是自大，而是基于之前的成功经验而来的。
 
+
+
+## 方法42： 成长思维：换一种思考方式
+
+我要大量实践、思考和总结来不断强化自己的编程水平，只多练是远远不够的。
+
+“找到”，“明白”都是结果，而“寻找”、“探求”、“学习”、“尝试”则是自己可以控制的行动。
+
+
+
+## 方法43： 任何事物都有它存在的价值
+
+人生经历的一切都有意义。
+
+从刚开始自学编程，由于水平垃圾被一年辞退三回。
+
+到后面去长春，去沈阳工作；然后来到了成都，
+
+一点点从小公司打拼到现在，一件件事磨练了我坚韧的性格，培养了遇到困难越挫越勇的勇气。
+
+说实话，走了很多弯路，经历了很多让人失落和沮丧的事情，但是每一件经历的事情都有非凡的意义，如果你这样想，就会对眼前的事情有不同的见解。
+
+
+
+## 方法44：感恩思维：我要说声“谢谢你”
+
+如果常怀感恩之心，你就会感到幸福。
+
+常怀感恩之心，你的想法就会发生变化。
+
+例子1：同事邀请了我一起吃午饭，感谢他；
+
+例子2：妻子每天都做好晚饭等我回来吃，谢谢她。
+
+
+
