--- a/每日读书/65种微习惯.md
+++ b/每日读书/65种微习惯.md
@@ -539,3 +539,18 @@ https://github.com/mozillazg/ptcpdump
 
 
 
+# 第三章：掌控情绪的15种微习惯 找到自己想做的事
+
+积极心理学中有“3：1法则”。人要感受到幸福，积极情绪和消极情绪的比例要为3：1.
+
+如果没有不安就不能做好准备，没有焦虑就产生不了效率，没有适度的自我厌恶感就不会自我反思。
+
+最重要的是去挖掘沉睡在内心深处的“着迷”和“狂热”这两种欲求。
+
+所以，感知自己的内心，并且养成遵循本心的习惯。
+
+
+
+方法45：高能的情绪：减少放电，增加充电
+
+锻炼身体和上下班听自己喜欢的音乐都是在充电。
