--- a/每日读书/65种微习惯.md
+++ b/每日读书/65种微习惯.md
@@ -551,6 +551,55 @@ https://github.com/mozillazg/ptcpdump
 
 
 
-方法45：高能的情绪：减少放电，增加充电
+## 方法45：高能的情绪：减少放电，增加充电
+
+**放电清单：**
+
+工作中经手的项目压力太大，导致自己心力憔悴的，想想真是没有必要。
+
+
+
+**充电清单：**
 
 锻炼身体和上下班听自己喜欢的音乐都是在充电。
+
+超级猩猩健身，出出汗，很爽。
+
+地铁上听听摇滚音乐，心里激情澎湃。
+
+打打拳释放下压力，心里很舒服。
+
+听着音乐写一篇情绪日记，很解压。
+
+**在一天将要结束时回顾下，写出今天的“放电清单”和“充电清单”和总体充实度。**
+
+
+
+## 方法46：投入的情绪：感受你的心流
+
+如果你把100%的精力都放在眼前的一件事情上，那么哪怕每天都很忙碌，精神压力也是很小的。
+
+1、冥想，注意力会集中到呼吸上
+
+2、走进大自然
+
+3、运动
+
+4、找到让自己着迷的工作
+
+以上方式都可以让自己更加专注。
+
+
+
+## 方法47：夺回生活的主动权
+
+建议：请你先写出自己被什么所束缚，然后制订一份计划并执行下去。
+
+- 早上花10分钟制订一天的工作计划 -》 结束被工作追赶的窘境
+- 早晨比之前一小时起床—》你可以从忙乱中解放出来。
+- 每天晚上10点准时关手机-》摆脱手机依赖症
+- 每天写日记，回顾一天都做了什么-》即使忙碌了一天，也很有成就感。
+
+
+
+## 方法48：做10件让自己心动的事
