tcp流重组之红黑树数据结构

--- a/编程思考/2025年重新审视自己的能力.md
+++ b/编程思考/2025年重新审视自己的能力.md
@@ -1,10 +1,12 @@
 # 一、立大志，坚守初心
 
-我要加入cilium这家公司，做网络安全产品，深耕于hubble和cilium项目，从今天开始，我就要好好的提升技术了。
+我要加入cilium这家公司，做网络安全产品，深耕于hubble和tetragon项目，从今天开始，我就要好好的提升技术了。
 
 人一辈子选一个职业，然后一辈子干一个职业，也是不错的。
 
 kubernetes是一个很不错的技能栈，不是简简单单就能学会的。
+
+对于我们来说，有很多需要做的事情。
 
 
 
