--- a/每日读书/猫先生的情绪自救.md
+++ b/每日读书/猫先生的情绪自救.md
@@ -121,3 +121,17 @@
 
 
 让自己变的更有价值，是克服抑郁情绪的关键。一条路走不通，就多开拓几条路，这样才能让生活变的有趣起来。
+
+
+
+# 第三章：猫先生的情绪自救
+
+## 负面情绪：是痛苦，也是成长的契机
+
+猫先生面对事情选择了逃避，导致根本问题没有被解决，才使焦虑情绪进一步发展成恐惧情绪。
+
+然而，猫先生依然没有正确面对恐惧情绪，而是将恐惧情绪归结于外部原因，所以就出现了嫉妒情绪。
+
+
+
+我们之所以会产生恐惧情绪，是因为自己无法面对困难的挑战，却过分重视结果，导致我们的自我价值受到了威胁，本质是我们的力量不够、资源不足，和应对困难的策略不佳。
