如何走出负面情绪

--- a/每日读书/猫先生的情绪自救.md
+++ b/每日读书/猫先生的情绪自救.md
@@ -135,3 +135,23 @@
 
 
 我们之所以会产生恐惧情绪，是因为自己无法面对困难的挑战，却过分重视结果，导致我们的自我价值受到了威胁，本质是我们的力量不够、资源不足，和应对困难的策略不佳。
+
+
+
+走出负面情绪，有两种方式：
+
+1、以情绪为中心
+
+先解决情绪问题，在解决问题的过程中总结对自我成长有益处的经验；
+
+
+
+2、以问题为中心
+
+直面导致负面情绪的根源问题，当我们把根源问题解决后，负面情绪自然就会得到缓解或消失。
+
+
+
+频繁的回避困难会让困难升级，还会使我们觉得自己无能，别人能做到的事情为什么我做不到，继而产生更强烈的负面情绪。
+
+知行合一，在事上磨练，是我一直最崇拜的方式。
