干一行，爱一行，投入全部的精力到我热爱的软件事业中

--- a/每日读书/强者思维.md
+++ b/每日读书/强者思维.md
@@ -40,3 +40,18 @@
 
 
 
+# 第三部分：自我疗愈 一切心理问题的解决方案：活在当下
+
+如何找到自己的热爱？
+
+人在刚接触一个新领域时，初期都是新鲜感满满，当新鲜劲一过，就坚持不了多久的。
+
+爸爸曾经和我说过，干一行爱一行，当你在一个领域投入足够多的时间、精力，你会慢慢发现这个领域的好玩之处，有很多有趣的点。
+
+然后这些有趣的点给了你正反馈，会促使你继续在这个领域持续投入时间和精力，然后你就会发现你爱上了它。
+
+
+
+在这个物欲横流的社会，我们每个人都难免被他人的价值观牵引，有时候自己还来不及思考，就被拥挤的人群裹挟着前行。
+
+很少有人能扒开人群，停在路边，向内挖掘自己的“真实人格”。
