开始阅读《如何达成目标》这本书

--- a/每日读书/65种微习惯.md
+++ b/每日读书/65种微习惯.md
@@ -603,3 +603,16 @@ https://github.com/mozillazg/ptcpdump
 
 
 ## 方法48：做10件让自己心动的事
+
+
+
+## 方法58：谁都想听好话
+
+他人欲望也叫关系欲望，主要是从对方的语言和反应中得到满足的欲望，如“想得到夸奖”、“想得到认可”、“想得到他人的尊重”等等。
+
+​	做一件事最好从自我欲望开始，如果从他人欲望开始，自己做了事但别人没有认可你、没有重视你、没有表扬你，你就会觉得失望，慢慢丧失做事的激情。
+
+做一件事分为内源性动机和外源性动机，内源性动机，是因为自己真心喜欢，或者做这件事对我有益，而不是因为什么外在的因素。
+
+
+
