--- a/每日读书/数字时代的效率手册.md
+++ b/每日读书/数字时代的效率手册.md
@@ -3,3 +3,28 @@
 ## 7.2 方法1：目标替换——从“我不想”到“我可以”
 
 我们需要建设一个推动自己并激发出“我可以”甚至“我能够”的简单目标。
+
+在养成自律习惯的时候面对自己的懒惰和逃避不一定要用抗争的方式，而是应该用“引导”的方式“变相” 的完成预期的目标，这才是让自己踏出第一步的正确方法。
+
+
+
+允许自己做的少点或者简单点，但是不允许自己什么都不做，当事情足够简单时，就能骗过大脑不需要意志力就能完成事情。
+
+
+
+## 7、3 方法二：目标分解——把大象装进冰箱要几步
+
+分解目标的核心思想就是不断对目标进行分解，直到分解后的目标变得简单且容易被执行。
+
+在分解目标时，可以借助甘特图、GDT工具或思维导图等工具辅助我们进行分解。
+
+什么是GDT工具？
+
+
+
+## 7、4 方法三：构建沉浸式环境
+
+1、使用纸和笔
+
+
+
