如何达成目标

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -15,3 +15,29 @@
 即使你在生活中做一个很小的决定，都是消耗自制力资源。
 
 那些在一个领域内比较成功的人，恰恰是因为他们把大多数自制力投入到这个领域，才能如此成功。
+
+
+
+第一章： 你明白自己去往哪里吗？
+
+怎样确定目标和如何实现目标本身同样重要。
+
+
+
+明确而有难度的目标比模糊或过于简单的目标更能激发优异的表现，而且两者的差异明显。
+
+如果奋斗的目标不明确，人们很容易向疲惫、灰心妥协。但是，如果你设定了明确的目标，你便再也无法欺骗自己了。达成目标还是没有达成目标之间，不存在中间地带。若是还没达成，若是还想成功，便只能继续努力。
+
+
+
+而成功完成某个极具挑战性的任务，会带给人更大的满足感和愉悦感；
+
+而完成一项简单的任务，根本不足挂齿。
+
+
+
+在生活中开启这样的高绩效循环：
+
+第一步是设定一些非常明确且具有合理难度的目标；
+
+第二步是用最能激励自己的方式来看待这些目标，这样才能进一步提高成功机会。
