记录每日的饮食情况 CMake实践手册.md

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -18,7 +18,9 @@
 
 
 
-第一章： 你明白自己去往哪里吗？
+# 第一部分：准备就绪
+
+## 第一章： 你明白自己去往哪里吗？
 
 怎样确定目标和如何实现目标本身同样重要。
 
@@ -41,3 +43,25 @@
 第一步是设定一些非常明确且具有合理难度的目标；
 
 第二步是用最能激励自己的方式来看待这些目标，这样才能进一步提高成功机会。
+
+
+
+### 大局和细节
+
+在做有一定难度的事情时，用“是什么”的方式思考，比用“为什么”方式思考更加简洁有效。
+
+
+
+随着我们做某件事情越来越熟练，事情变得相对容易了，我们开始用“为什么”来看待，即把重点放在这件事的意义和目的上。
+
+
+
+当人们从“是什么”的角度来思考行为时，会把关注点放在细节上；当你需要做的事情格外复杂时，先撇开全局，把关注点聚焦在手上的事儿，是明智的做法。
+
+
+
+从大局和细节的思考模式各有优劣，最好是根据目标的不同在两种模式中切换。
+
+**一方面，**要想变的激情满满，让自制力大为提升，从“为什么”的角度来思考。想一想行为背后的意义和目的。
+
+**另一方面，**要想完成复杂、陌生的事情时，需要从“是什么”的角度思考。需要把它分解成几个具体的步骤。
