今日健康饮食

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -65,3 +65,31 @@
 **一方面，**要想变的激情满满，让自制力大为提升，从“为什么”的角度来思考。想一想行为背后的意义和目的。
 
 **另一方面，**要想完成复杂、陌生的事情时，需要从“是什么”的角度思考。需要把它分解成几个具体的步骤。
+
+
+
+# 第二部分 预备开始
+
+## 第三章 使人们不断前进的目标
+
+自身信念会驱使你把关注点放在不同的目标上，是重点关注表现，还是重点关注进步。
+
+反问下自己
+
+在你目前这份工作中，你把新项目和新任务看成是学习和积累专业知识的机会，还是看成是证明自己或者让老板刮目相看的机会？
+
+你的目标是**展示才华**还是**谋求进步**？激励你的，是展示才华还是谋求进步？
+
+**展示才华：**得到成绩A，拿到100万订单，得到领导和同事的表扬，是佛法中的向外求的表现；
+
+**谋求进步：**今天的我比昨天的我有一丁点的进步，踏踏实实的做事，不管结果好坏，对我来说都有益处，失败了有利于我总结血泪教训，成功了有利于我总结宝贵的经验以其他把经验进行复用。
+
+
+
+一直困扰我的一个问题：
+
+### 3、1 当你以展示才华，达成某个结果为目标时
+
+绩效目标：显示自己的聪明才华，胜过其他人。
+
+当你在追求绩效目标时，你会把自己的精力集中到实现某个特定的结果上。
