1、每日读书打卡 2、记录早上饮食和今早的体重kg 3、提交uprobe课程的初稿（这块需要好好加强）

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -93,3 +93,69 @@
 绩效目标：显示自己的聪明才华，胜过其他人。
 
 当你在追求绩效目标时，你会把自己的精力集中到实现某个特定的结果上。
+
+
+
+## 第六章 选择适合自己的目标
+
+
+
+在生活中选择目标时，可选择的目标实在是种类繁多，那么到底如何选择呢？
+
+- 选择进取型还是防御型目标？
+- 展示能力型还是谋求进取型？
+- 思考方式是”为什么“还是“是什么”？
+
+### 6、1 当你觉得不费吹灰之力时
+
+**1、以展示才华方式实现目标**
+
+如果目标对你来说简单、容易，或者你之前做过，清楚的知道实现目标的具体步骤有哪些，也许采用展示能力型的目标对我来说最有益。
+
+在团队中展示你的能力多么优异，多么能干，展示你的核心竞争力，俗称“装逼”，能带给人极其强大的动力，我今年5月去西安ebpf演讲就对我的职业生涯就有很多的鼓励作用，增强了我做事的信心。
+
+
+
+**2、以进取为焦点的角度实现目标**
+
+在实现目标的整个过程中，不断的问自己，实现这个目标后，你能从中获得什么？
+
+你获得的东西，与你的梦想有什么联系？是不是梦想的一部分？获取有助于实现梦想？
+
+
+
+### 6、2 当你需要鞭策时
+
+**类似场景：**
+
+你内心有一个真正想实现的目标和理想（提升自身的编码实战能力），但是不知道为啥，就是没有足够的动力让其行动起来？
+
+时间不断流逝，几周、几月、几年过去了，但是你和心里的目标或理想的距离并没有拉近。
+
+
+
+点燃你激情的方式：以“为什么”的方式来思考问题，能使人产生强大得多的激情和活力。
+
+以我自己为例，以“为什么”的思维来考虑提升自身的编码实战能力。
+
+**1、弥补过去的遗憾和自我证明**
+
+曾经因为编码能力不强，被领导和同事看不起，所以我有强烈的欲望要证明我自己；
+
+当能够独立完成一个中小型项目，过去的自卑感和自我否定会被“我可以”的自信和成就感所取代；
+
+用中国古话说就是“知耻而后勇”！！
+
+
+
+**2、享受创造的乐趣和成就感**
+
+我非常享受从0到1开发出一个产品的快感，当我有一个很好的想法，并且我把想法变成现实，内心会得到极大的满足。
+
+
+
+**3、追求职业成长和掌控感**
+
+独立做项目，意味着驾驭一个完整的工作流程，包括需求分析、设计、编码、测试、运维等。
+
+一则能锻炼自己的全方位的能力，二则能够有效的打造自己的个人名声，未来可以选择更高好的工作，甚至有机会带团队或者创办公司。
