读书，如何达成目标

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -159,3 +159,59 @@
 独立做项目，意味着驾驭一个完整的工作流程，包括需求分析、设计、编码、测试、运维等。
 
 一则能锻炼自己的全方位的能力，二则能够有效的打造自己的个人名声，未来可以选择更高好的工作，甚至有机会带团队或者创办公司。
+
+
+
+### 6、3 当前路坎坷时
+
+越是困难的目标，越要降低自己的心理预期，失败是常事，成功才是偶然的，有很多外界因素都可能导致事情失败。
+
+如何学着在失败后，百折不挠的继续奋斗呢？下面是一些操作步骤：
+
+**首先，将目标具体化**
+
+因为具有挑战性且清晰明切的目标，更能激发动力。
+
+明确的目标能让你知道，是否实现了目标？如果没实现，还差多远？
+
+
+
+**其次，将“为什么”的思维转变为“是什么”**
+
+即：我需要做什么来实现目标？
+
+将关注点放在需要采取的具体行动上，能使你更好的解决困难，从而实现目标。
+
+
+
+**再次，防御型目标**
+
+防御型目标，不是“我想获得什么”，而是“我不能失去什么”。
+
+- 促进型目标：
+  - 以获得奖励、成长、成就为动力，比如“我要提升编程实战能力，获得更好的工作机会”
+- 防御型目标：
+  - 以避免失败、避免损失为动力，比如“我不想别人看不起，不想别人骂我是菜逼”、“我不想让自己的职业生涯后悔”。
+
+防御型目标会对我们造成心理压力，甚至产生悲观情绪，恰恰是这个压力促使我们不惜一切努力去完成目标，因为是人都有人性，人性都是害怕失去、害怕失败。
+
+
+
+今天听到的最治愈的一句话：
+
+将关注点放在个人成长和发展上，放在事情的进展上，而不是展示自己能力证明自己上，能助你更轻松的应对困难。
+
+事情不管是成功还是失败，都有其意义，即使永远做不到完美，我们也一定会进步。（这句话说的真心赞）
+
+以公司流量探针项目举例，流量探针即使不成，也能帮我复习网络流量分析技术，对我的技术成长、职业生涯、乃至心智的磨练都是有很大帮助的。
+
+
+
+### 6、4 当你无法抗拒诱惑时
+
+
+
+# 第三部分 行动起来
+
+## 第八章 扫除障碍
+
