如何达成目标，第六章全部完成，明天看第五章第一节

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -96,6 +96,12 @@
 
 
 
+### 第五章 让你幸福的目标
+
+TODO:6月12号目标
+
+
+
 ## 第六章 选择适合自己的目标
 
 
@@ -208,6 +214,110 @@
 
 
 ### 6、4 当你无法抗拒诱惑时
+
+首先，从“为什么”的视角来思考，找到减肥的意义。
+
+和大盘鸡拌面的美味相比，节食变的健康，头脑更加逻辑清晰，没有什么比健康、有精力头更让我上瘾的。
+
+
+
+让你的目标以防御为焦点，也是增强抵抗诱惑力的一种有效手段。
+
+将关注点放在避免损失而不是获得利益时，其效率更好。
+
+
+
+## 6、5 当你本该昨天做完时
+
+当人们把关注点放在追求利益最大化而不是避免损失时，就不会那么关注细节，便会加快做事的节奏和动作。
+
+比如每次考试前的临时突击，为了考个好成绩，我们会把重点的地方多看多练，直接略过非考点或者非重点。
+
+虽然在过程中会犯点小错，但是速度会快的多。
+
+
+
+### 6、6 当你需要完美的完成任务时
+
+当你需要把事情做对、做精、不在乎花费多长时间时，给你的目标一个防御性焦点。
+
+需要采用避免损失的角度来思考目标， 放慢做事的速度和节奏，采用谨慎或者保险的方式来做事。
+
+一遍遍的重复某些事，确保事情没有遗漏。
+
+
+
+### 6、7 当你想欣赏沿路风景时
+
+如果你想让实现目标的过程中更有趣，请把关注点放在求进步而不是展示才华上。
+
+谋求进步的目标，能帮助你真正的喜欢上一件事，比如我喜欢上编程，我姐喜欢上教物理和数学学科，
+
+我们都觉得学习这些事情，本身对自己就是一种享受。
+
+
+
+一般来说，自己选择的目标比别人制定的目标有意思的多，也令人快乐的多。
+
+奖励和惩罚这种东西，会把我们的注意力转移到目标以外的其他事情上，从而降低了我们对目标以及过程中的投入感。
+
+
+
+## 6、8 当你想要真正的快乐时
+
+身边很多人取得了成功，但是他们活的却不幸福。主要是他们追求的目标不能满足人的基本需求：
+
+- 关联感
+- 能力感
+- 自主感
+
+选择那些涉及建立并培育人际关系的目标，便能满足对关联管的需要；
+
+追求有利于个人成长的目标，便能满足对能力感的需要；
+
+若每次都追求自己选择的目标，就能满足你对自主感的需要，因为这种目标符合你的兴趣、你的能力、你的价值观。
+
+
+
+### 6、9 要点回顾
+
+**事情容易时，选择展示才华的目标。**
+
+采用进取型的心态，积极进攻；
+
+专心致志的展示才华，全心全意的实现进取型目标，将关注点放在一旦成功后可能获得的好处上。
+
+
+
+**当你似乎无从下手时，用“为什么”思维思考目标对我的重要性。**
+
+实现目标失败后，我可能面临的损失是什么？
+
+
+
+**事情困难（或不熟悉）时，选择清晰且具体的目标。**
+
+采用防御型的心态，稳固阵地，以守为攻，少损失就是赢。
+
+思考自己需要做些什么才能实现目标？专注到具体的事情上。
+
+采用谋求进步的心态，日拱一卒的思想，踏踏实实的去做事。
+
+
+
+**面对诱惑时，从“为什么”的角度考虑你的目标。**
+
+选择着重避免损失的防御性目标，有助于你抵抗诱惑。
+
+
+
+如果你想让实现目标的过程有趣，选择谋求进步的目标，同时也是自主的、自己选择的目标。
+
+
+
+如果你想拥有真正、持久的幸福，选择满足关联感、能力感、自主感这三个基本需要的目标。
+
+不要太过关注功名利禄这些外在的食物
 
 
 
