每日读书/如何达成目标.md 今天真开心，打卡打卡。

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -98,7 +98,65 @@
 
 ### 第五章 让你幸福的目标
 
-TODO:6月12号目标
+知道自己要什么，以及为什么想要，是同等重要的。
+
+知道为什么想要，会在遇到困难时激励你，让你足够坚韧；
+
+在顺境时不至于飘飘然，扣问本心或初心，这点真的很重要，能让你越走越远。
+
+
+
+知道自己要什么，就可以在实现目标的过程中得到反馈，是已经实现定下的目标？
+
+如果没实现，那么还差多少？是不是方向偏离和目标？
+
+
+
+### 5、1 我们真的需要什么
+
+关联感
+
+​	对爱和被爱的渴望，例子：使用微信认识新朋友、维护现有朋友关系、看娱乐小视频等
+
+能力感
+
+​	影响周围环境，并获得你想要的东西。那些提升自身能力，让你有所作为的目标，能够满足你对能力感的需要。
+
+例子：发展技能、学习新事物、实现个人成长等。
+
+自主感
+
+​	你能否按照自己的兴趣或意愿去做事；“自主就是让你感觉你是决定者。”
+
+
+
+**内在动力：**被自己的本心所鼓舞去从事一些源于内心的活动，而不是被迫执行任务。
+
+人要好好保护自己的内在动力，因为它很脆弱。
+
+
+
+### 5、2 我们真的不需要的目标
+
+想要获得长久的幸福感，需要向内求，而不是向外求。
+
+外：
+
+渴望获得他人的认可和尊重；
+
+纯粹为了赚钱而积累财富；
+
+寻求自我价值的外在体现；
+
+当我们在关联感、能力感、自主感上这三方面一次次受挫时，我们会转而追求一些肤浅的目标，他们是自我价值的外部源头。
+
+当我们发现自己被高度控制（缺失自由）、太困难且有挑战（剥夺了胜任的感觉）、被拒绝（剥夺我们关联感）的局面中时，我们很容易转向那些“次优级”的方案，以此作为一种防御策略。
+
+
+
+### 5、3 这到底是谁的目标
+
+TODO:明天06-12去读的
 
 
 
