每日读书 如何达成目标

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -156,7 +156,57 @@
 
 ### 5、3 这到底是谁的目标
 
-TODO:明天06-12去读的
+之前圆圆即使没有任何奖励或督促，也会主动看书，而且一看就是半小时一小时，
+
+而自从老师规定每个学生每天至少阅读30分钟后，圆圆时不时不耐烦的抬头看时钟，盼望着30分钟早点过去。
+
+在她看来，读书已经变成了一件任务，而不是因为自己喜欢做而去做的事。
+
+牺牲的是什么？自然而然、发自内心的阅读动力。
+
+
+
+当人的内在动力被激发时，会更享受做事的过程，会觉得一切更有趣味，在困难面前会更加百折不挠，
+
+内在动力是一种强大的力量，能够激励我们朝着目标迈出第一步并坚持走下去。
+
+
+
+研究表明，当人们**觉得**自己有选择并且掌握着自己的命运时，他们会更有动力，更加成功。
+
+当自主感需求受到遏制时，会产生相反的情况，当感到自己被管束的太紧时，曾经热爱学习，有着内在动力的学生，也会放弃追求。
+
+
+
+什么会破坏内在动力呢？
+
+- 奖励
+- 威胁
+- 监视
+- 最后期限
+- 其他压力
+
+因为我们会将这些当成“控制”来看待，而且觉得我们再也无法掌控局面。但是公司给的最后期限，又是不得不接收的事情，所以人生是很矛盾的。
+
+
+
+奖励并不总是破坏人们的动力，比如出人意料的奖励和不与成绩挂钩的奖励都是有效的。
+
+至理名言啊：
+
+习惯型目标不适合用奖励来持续，
+
+目标型任务可以用阶段性奖励来促进完成，
+
+如果开始一件事比较难，那么就用奖励做油门和动力吧。
+
+
+
+### 5、4 如何营造自主选择的感觉
+
+TODO:06-14
+
+当人们可以自主选择、自主决定如何行动以及自主决定追求什么样的目标时，他们的内在动力不断增强。
 
 
 
