1、如何达成目标.md 2、记录减肥效果

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -204,9 +204,79 @@
 
 ### 5、4 如何营造自主选择的感觉
 
-TODO:06-14
-
 当人们可以自主选择、自主决定如何行动以及自主决定追求什么样的目标时，他们的内在动力不断增强。
+
+人生在世，身不由己，有时候你需要按照别人的吩咐去做。
+
+事实证明，真正的自由选择并不是那么的重要，重要的是一种自由选择的感觉。幸运的是，自我选择的感觉可以轻松的营造。
+
+满足自主感的需要，对个人的心理健康至关重要。
+
+
+
+**如何营造自主选择的感觉——最佳实践**
+
+**1、为每一个目标写下“我的理由”**
+
+不是简单的写“我要写基于dpdk的开源项目”，而是写出对你有个人意义的真实理由。
+
+示例：我喜欢写代码，我想把多年的网络流量分析经验分享给后人，我想给我的职业生涯画上个句号，不给自己留遗憾。
+
+
+
+**2、把“必须做”转为“我选择做”**
+
+每天早上列计划时，把“今天必须做的事”改为“今天我选择做的事”，并写下原因。
+
+示例：“今天我选择手敲代码做专项训练，是因为它能帮我实现技术大佬的梦想，让我更开心。” 
+
+
+
+**3、任务清单中预留“自由选项”**
+
+在任务清单中，预留1-2项根据你的爱好或兴趣自主选择的事情。
+
+这个方法我现在就在实施，每天再帮，都会进行读书以及编写自己的开源项目代码。
+
+示例：“编码开源项目代码，或者录制视频，或者编写技术博客”，都是我的爱好，让我开心。
+
+
+
+**4、将大目标拆分“小选择”**
+
+把一个大目标拆解为多个小人物，每完成一个小任务时就问：“我选择先做哪一项？”
+
+让每一步都带有选择权，增强参与感。
+
+
+
+**5、在团队或朋友圈中表达你的选择理由**
+
+在团队或朋友圈中，主动分享“我为什么选择做这个项目/用这个方法”，让大家感受到你的自主性。
+
+同时，在一些事情上也容易获得理解和支持。
+
+
+
+6、每天自问“今天有什么是我自己能主导的？”
+
+睡前记录下当前至少一件完全由自主决定的事，不论大小。
+
+长期坚持，你会发现自己越来越有主动权和成就感。
+
+
+
+日常练习
+
+每做一件事，先问自己：“我什么做这件事？是完成别人的期待？还是实现自己的梦想？”
+
+每天记录一件“主动选择并坚持”的事，不论大小都可以。
+
+
+
+### 5、5 如何把别人规定的目标规化为自己的目标
+
+
 
 
 
