每日读书打卡完成

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -276,7 +276,57 @@
 
 ### 5、5 如何把别人规定的目标规化为自己的目标
 
+把**你不得不做、被要求做、别人希望你做**的事情，变成你内心真正想做的事情，这样你更有动力、更容易坚持。
 
+**1、理解目标背后的意义**
+
+它对公司有什么价值？对我自己有什么积极的影响？（以流量项目为例子）
+
+
+
+**2、在目标中找到“属于你自己的一部分”**
+
+把别人的大目标 ，拆分成自己感兴趣的、擅长、有成长空间的内容。
+
+
+
+**3、将目标和你自己的价值观或人生目标连接起来**
+
+在公司抓住流量探针的机会，和我想通过大量编程实践成为技术大佬的心有很大关联，是我实现梦想的路径上的一环，所以不激励我，我都会好好干这件事。
+
+
+
+**4、主动参与目标制定或细化过程**
+
+如果可以的话，积极参与团队目标的讨论和制定，提出自己的观点或建议，让你的声音被采纳，增强归属感。
+
+在无法参与目标制定时，也主动和上级或同伴沟通，了解目标背后的意义和好处。
+
+
+
+**5、用“我选择”而不是“我被要求”自我暗示**
+
+不断提醒自己，“我选择接受这个挑战，因为xxx“，而非”我必须做这个任务，因为是领导安排的“。
+
+
+
+**6、将”个人成长目标“与”团队目标“想结合**
+
+完成团队目标的过程中，也可以适时的实现下自己个人的成长目标。
+
+例如：”在这个项目的实现过程中，我需要学会这种新技术，并应用到此项目中“
+
+
+
+**7、记录你的成长和收获**
+
+每完成一个阶段，写下你从别人目标中获得的经验、技能或自信。
+
+从正面的成长体验，逐步强化”这就是我自己想做的“心理认同。
+
+
+
+当我们理解价值观背后的道理时，我们的关联感和能力感会大大加强。
 
 
 
