如何达成目标.md

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -96,7 +96,7 @@
 
 
 
-### 第五章 让你幸福的目标
+## 第五章 让你幸福的目标
 
 知道自己要什么，以及为什么想要，是同等重要的。
 
@@ -455,7 +455,7 @@
 
 
 
-## 6、5 当你本该昨天做完时
+### 6、5 当你本该昨天做完时
 
 当人们把关注点放在追求利益最大化而不是避免损失时，就不会那么关注细节，便会加快做事的节奏和动作。
 
@@ -491,7 +491,7 @@
 
 
 
-## 6、8 当你想要真正的快乐时
+### 6、8 当你想要真正的快乐时
 
 身边很多人取得了成功，但是他们活的却不幸福。主要是他们追求的目标不能满足人的基本需求：
 
@@ -553,3 +553,44 @@
 
 ## 第八章 扫除障碍
 
+在本章中，我们会了解到实现目标的道路上常见的陷阱，也会告诉你他们为什么会出现。
+
+仅仅知道哪里可能会出错还不够，我们还得知道如何应对。
+
+我会一步步地讲解应对常见破坏事情的方法。
+
+**1、问题本质：选择太多，注意力分散**
+
+每天我们有很多想做的事：比如学技术、运动、陪家人、读书等
+
+
+
+大脑每时每刻都有机会去执行某个目标，比如下班后可以学习、辅导娃娃写作业，但是我们的大脑只能关注有限的目标（1-2个），所以就容易在多个选择之间摇摆不定。
+
+
+
+**2、为什么会错失机会？**
+
+**优柔寡断：**面对太多目标和选择，我们常常犹豫不决，不知道先做什么，该做什么。
+
+**注意力容易被别的事情吸引：**比如想学习，结果被手机推送、朋友聊天等干扰，最后什么也没做成。
+
+**时间转瞬即逝：**当你还在犹豫“到底做什么好”的时候，小块的时间已经过去，机会已经溜走。
+
+
+
+每知道健身对我的健康很重要，但是我的锻炼次数无法达到减肥的目标，我常常为自己的失败找借口：“我太忙了，今天没时间锻炼。”，但好好想想，我并不是没有任何运动的机会。
+
+早上的锻炼，我选择了多睡一会。
+
+中午的锻炼，我选择了下午吃饭吃的久了一点；
+
+晚上的锻炼，我选择了加班或者想赶快回家看电视。
+
+每当我本来有机会实现锻炼身体的目标时，我都选择了其他目标，为什么呢？
+
+因为这些目标使人愉悦，总是抢走了我的精力和注意力。
+
+
+
+结论：我们常常在“不喜欢的目标”上浪费时间，等你终于想去做那些对你来说真正重要的事时，发现时间已经被别的事情占满了，机会已经错过了。
