1、每日读书/如何达成目标 2、记录体重和饮食

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -559,6 +559,8 @@
 
 我会一步步地讲解应对常见破坏事情的方法。
 
+### 8、1 把握当下的机会
+
 **1、问题本质：选择太多，注意力分散**
 
 每天我们有很多想做的事：比如学技术、运动、陪家人、读书等
@@ -594,3 +596,86 @@
 
 
 结论：我们常常在“不喜欢的目标”上浪费时间，等你终于想去做那些对你来说真正重要的事时，发现时间已经被别的事情占满了，机会已经错过了。
+
+
+
+### 8、2 保护目标
+
+几乎所有的目标都在相互竞争，假如把时间花在全力执行一个目标上的话，通常花在其他目标上的时间就少了。
+
+不可能既想享受美食，又想依靠节食来减肥。
+
+根据这两个目标的冲突模式，所有的节食减肥人士必定都有两个互不相容的目标，即享受美食和控制体重。
+
+当一块巧克力蛋糕出现时，相互冲突的目标就在人们的大脑中被激活了，大脑做出的反应便是禁止实现其中的一个目标，从而竖立一块“目标盾牌”。
+
+**重点：**
+
+两个相对的目标之间的冲突，是动机中最棘手的问题之一，特别是当你无法放弃某个目标时。
+
+**解决方法：**
+
+同时顾及两个目标，轮流给予他们同样的待遇。
+
+
+
+### 8、3 我做的怎么样？
+
+如果你对事情的进展状况根本不了解，就几乎不可能实现目标。
+
+总体进度我完成了多少？30%？50%？80%？
+
+如果进度慢了，那就需要加加班，加快下步伐。
+
+如果进度快了，是时候放慢下速度，复盘和反思下。
+
+
+
+大脑对于目标遵循一条简单的原则：减少差异。
+
+你的目标 vs 你现在的位置 两者之间的差异。当你的大脑觉察出目标和现实之间的差异时，他会采取行动来弥补这个差异。
+
+如果缺乏关于目标进展的情况信息，大脑便觉察不出差异，也不会做出任何反应。
+
+
+
+反馈有时来自外界，但更多情况，还是得自己生成，换句话说：
+
+**你得清楚自己做得怎么样，心理学家称之为自我监控**
+
+首先，自我监控需要付出努力
+
+在奋力追求目标的时候踩一下刹车，检查自己，以便获得必要的信息来评估你做的怎么样，并不是件容易的事。
+
+
+
+其次，如何面对负面反馈也是“自我监控”的一个挑战
+
+在做事的过程中，也许你做的不好，但不得不面对这个负面反馈，负面反馈虽然让人痛苦，但是能指出事情哪里做的不好？
+
+路线是不是偏离正轨了？哪些地方需要提升？有反馈才能更好的进步。
+
+
+
+以减肥为例，讲述自我监控
+
+每天我都会称体重，一旦发现体重增长，我就会吃的健康一点，再辅助做一些运动。
+
+因为我不想让体重过度失控，导致胖回之前的样子，导致身体不健康。
+
+并且每天我会记录饮食情况，来追踪一周的饮食情况，比如周一到周五吃的健康一点，周六周天放假可能吃的就好一点，容易长胖，
+
+我会摸清这个规律，接受这个现实，然后在策略上做出一些调整。
+
+
+
+### 8、4 你需要的太少了，不需要的太多了
+
+
+
+## 第九章 制订计划
+
+### 9、1 圣诞节的文章
+
+### 9、2 “如果。。。那就。。。”计划的力量
+
