每日读书打卡

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -677,5 +677,74 @@
 
 ### 9、1 圣诞节的文章
 
+没有列出写作文的时间和地点的学生中，32%的人上交了作文，而在列出的写作文的时间和地点的学生中，71%的人上交了作文，是前者的两倍多。
+
+​	听到这个结果，当时我下巴都快掉到地下了。
+
+
+
 ### 9、2 “如果。。。那就。。。”计划的力量
 
+**糟糕的计划：**
+
+第1步：少吃
+
+第2步：多运动
+
+他们只是概括了需要的行动，完全忽略了重要的细节。
+
+什么时候运动？在哪运动？怎么运动？
+
+到底要少吃什么东西？少吃多少？
+
+
+
+**好的计划：**
+
+第一步，把“少吃”改为“每天吃的东西所含的热量不能超过1500卡路里”；
+
+第二步，每周1、3、5去健身房锻炼一小时。
+
+
+
+如果今天周一，那就需要从公司前往健身房去锻炼一小时身体。
+
+
+
+不管是谁，不管是想实现什么目标，想提升实现的成功率，就需要围绕目标所需的
+
+时间、地点、方式来做计划。
+
+
+
+**其作用原理：**
+
+当你决定了行动的时间、地点、方式时，大脑会发生反应。
+
+制订计划这个举动，会为情景（“如果”）与既定的行为（“那就”）之间搭起一座桥梁。
+
+示例：每周周六，早上吃完饭，就给母亲打个电话。
+
+这两个行为就直接联系到一起了。
+
+
+
+**计划带来的第二个效应是：**
+
+你的大脑会高度激活情景或暗示（每周周六）。类似一个小人在不停的举手，大脑会下意识的搜索着环境中任何与“如果”条件相关的情景。
+
+
+
+**计划带来的第三个效应是：**
+
+让目标在大脑中得到巩固。
+
+一旦“如果”（情景）发生了，“那就”（行为）这一部分便会下意识的自动启动。
+
+制订计划后，大脑已经知道了做什么，接下来任务就是不假思索的执行。
+
+
+
+另一个好处：节省宝贵的自制力资源
+
+潜意识会替我们察觉环境中的暗示，并由此引导行为，我们便不会觉得那么费力，需要动用的意志力也少一些。
