每日达成目标

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -748,3 +748,210 @@
 另一个好处：节省宝贵的自制力资源
 
 潜意识会替我们察觉环境中的暗示，并由此引导行为，我们便不会觉得那么费力，需要动用的意志力也少一些。
+
+
+
+#### 要点回顾
+
+1、制订计划
+
+在实现目标得过程中，多用简单得“如果。。。那就。。。”的计划来解决。
+
+
+
+2、确定行动目标
+
+实现目标首先从确定实现目标需要的具体步骤开始。
+
+避免模糊不清的内容，比如“多吃点”、“多学点”就有点模糊了。
+
+比如“每晚9点-10点的时间，练习打拳，左右手直拳各5个”，这样的目标清晰而明确，你对于自己需要做什么以及有没有达成目标，一目了然。
+
+
+
+3、决定时间和地点
+
+下一步是确定每个步骤的时间和地点。尽可能做到具体。
+
+帮你的大脑觉察机会并抓住行动时机，形成“如果。。。那就。。。”的计划。
+
+
+
+4、瞄准障碍
+
+想想实现目标的路上有可能出现的障碍和诱惑。分别以减肥锻炼、每日编程为例来想下：
+
+1）工作太忙/没时间锻炼
+
+**如果**我今天上班很累或加班很晚，觉得没时间锻炼，
+
+**那就**回家只做20分钟高强度有氧训练，或者在家跟着“叶的冒险”视频跳30分钟。
+
+
+
+2） 障碍：每次去超级猩猩都需要花69块钱
+
+**如果**觉得花钱锻炼太贵不划算的时候，
+
+**那就**在家图30分钟徒手训练（HIIT、波比跳、深蹲、俯卧撑等），用免费的方式来保证运动频率，
+
+偶尔奖励自己去一次超级猩猩。
+
+
+
+3）晚上想吃夜宵或零食
+
+**如果**我晚上9点以后很想吃东西，
+
+**那就**先喝一杯温水，如果实在饿的受不了，就喝点电解质水来缓解下。
+
+
+
+4）减脂期间：有朋友聚会
+
+**如果**去北京出差有朋友聚会，盛情款待点了很多肉菜，
+
+**那就**只尝几口，主要夹蔬菜和清淡的菜，多喝水，控制总量。
+
+
+
+针对每日编码5行的目标：
+
+1）工作疲惫/加班
+
+**如果**下班很晚/精神疲惫
+
+**那就**只打开编辑器写最简单的几行，如5行注释，5行伪代码，哪怕是一点点，也算完成任务。
+
+
+
+2）家庭责任和琐事
+
+**如果**晚上需要陪伴家人或做家务，
+
+**那就**把编码时间调整到早晨出门前，或者午休挤出10分钟时间来完成。（早上和中午的时间都是很充裕的）。
+
+
+
+3）生活琐事打断
+
+**如果**临时有应酬、聚会或外出，
+
+**那就**提前在手机或本子上写下5行伪代码或者思路，利用碎片时间完成。
+
+
+
+4）短视频 娱乐吸引
+
+**如果**下班后习惯性或者喜欢刷短视频，
+
+**那就**先设置个闹铃，强制先写5行代码再去刷短视频，把写“代码”作为解锁娱乐的门槛。
+
+
+
+5）技术卡壳或缺乏灵感
+
+**如果**就今天实在不知道写什么
+
+**那就**打开昨天的代码复盘优化，或者重构一小段老代码，把写代码的门槛降低到最低。
+
+
+
+6）身体健康状态不好
+
+**如果**今天生病或者状态很差
+
+那就写下简单的一行注释或者一行伪代码，或者在心里
+
+
+
+怎么应对呢？
+
+为每一个障碍和诱惑制订一条“如果。。。那就。。。”的计划。
+
+
+
+可以把这些“如果。。。那就。。。”写进手机备忘录，让它每天提醒自己。
+
+
+
+这可以使你提早制订出最佳计划，不论遇到何种情况，都能保证你不偏离实现目标的轨道。
+
+
+
+## 第十章  增强自制力
+
+自制力像肌肉一样，可以得到锻炼，所以也需要恢复。
+
+在做完某件费力的事情后如何恢复自制力呢？
+
+
+
+### 一、目标感染
+
+若我们想着那些我们认识的、拥有极强自制力的人们，也可以感染我们自己的自制力。
+
+就比如我姐完全利用自制力减肥50斤后，下次当我需要利用自制力来减肥时，我也会感觉自己受到的鼓舞。
+
+
+
+### 二、放松自我，有个好心情
+
+收获礼物
+
+你可以通过多种方式来获得好心情，其中收到礼物尤其奏效。
+
+
+
+看喜剧视频
+
+
+
+### 三、提升自制力储备的方法
+
+当你的自制力消耗一空时，喝一杯甜的可以恢复自制力，但是喝代糖没有这个效果，因为代糖不是糖。
+
+
+
+## 面对消耗一空的自制力
+
+告诫自己时刻小心这些陷阱：
+
+Hungry、Angry、Lonely、Tired(HALT)
+
+饥饿，生气，孤独，疲惫，这四种情形都能破坏自制力。这四种情形，也是最需要我们拿出捍卫目标的行动来抵御负面情绪的时候。
+
+
+
+**首先，有一些策略可以控制对自制力的需要：**
+
+人的行动就像小球，从0到1让其动起来，和从1到0让其停止都是很难的。
+
+所以想培养一个好习惯，每日做一点让小球慢慢运动起来，即使后续不用自制力，小球也能一直保持运动状态，习惯慢慢养成；
+
+如果想终止一个行动，那么在它的萌芽之初就要采用行动，行为持续的时间越长，小球就运动的越快，想让它停下来就需要越多的自制力。
+
+比如禁欲，就得在得到第一个吻后停住，不能等到热血沸腾难以控制的时候再刹车，这时候想刹车是很难的。
+
+**在开始之前，或者刚开始时停止，是降低对自制力需要的绝佳方式。**
+
+
+
+**其次，记得“为什么”的思考方式（事情的意义，价值观和理想）和“自我监控”，也是抵抗诱惑的最佳策略。**
+
+比如减肥，每次吃饭前想想心里的目标，我迫切想要个好身体，或者上称称重下
+
+
+
+**无论你在做什么，不要试图同时追求两个需要强大自制力的目标。**
+
+你必须尊重一个事实，不管你是谁，自制力都是有限的。
+
+
+
+**最后，对自己好一点也能恢复消耗一空的自制力**
+
+当我们相信能从行动中学到东西，或者坚持能对社会有益时，这种信念的力量是非常强大的。
+
+
+
