如何达成目标，第十一章

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -887,7 +887,9 @@
 
 
 
-### 一、目标感染
+### 恢复自制力的方法
+
+#### 一、目标感染
 
 若我们想着那些我们认识的、拥有极强自制力的人们，也可以感染我们自己的自制力。
 
@@ -895,7 +897,7 @@
 
 
 
-### 二、放松自我，有个好心情
+#### 二、放松自我，有个好心情
 
 收获礼物
 
@@ -907,13 +909,13 @@
 
 
 
-### 三、提升自制力储备的方法
+#### 三、提升自制力储备的方法
 
 当你的自制力消耗一空时，喝一杯甜的可以恢复自制力，但是喝代糖没有这个效果，因为代糖不是糖。
 
 
 
-## 面对消耗一空的自制力
+### 面对消耗一空的自制力
 
 告诫自己时刻小心这些陷阱：
 
@@ -923,7 +925,7 @@ Hungry、Angry、Lonely、Tired(HALT)
 
 
 
-**首先，有一些策略可以控制对自制力的需要：**
+#### **首先，有一些策略可以控制对自制力的需要**
 
 人的行动就像小球，从0到1让其动起来，和从1到0让其停止都是很难的。
 
@@ -937,7 +939,9 @@ Hungry、Angry、Lonely、Tired(HALT)
 
 
 
-**其次，记得“为什么”的思考方式（事情的意义，价值观和理想）和“自我监控”，也是抵抗诱惑的最佳策略。**
+#### **其次，记得“为什么”的思考方式（事情的意义，价值观和理想）和“自我监控”，**
+
+**也是抵抗诱惑的最佳策略。**
 
 比如减肥，每次吃饭前想想心里的目标，我迫切想要个好身体，或者上称称重下
 
@@ -949,9 +953,115 @@ Hungry、Angry、Lonely、Tired(HALT)
 
 
 
-**最后，对自己好一点也能恢复消耗一空的自制力**
+#### **最后，对自己好一点也能恢复消耗一空的自制力**
 
 当我们相信能从行动中学到东西，或者坚持能对社会有益时，这种信念的力量是非常强大的。
 
 
 
+### 最后的警告：别去挑战命运
+
+研究表明，大多数人对于自己控制冲动的能力过于自信，但事实上，他们的自制力并没有他们想象的那么强大。
+
+我们的自我认知越膨胀，面临的诱惑就越多，以至于没有刻意的回避诱惑。
+
+
+
+我周四的时候，和熊俊吃饭时，吹牛逼说，要让身体知道谁才是它的主人，否则饿它两天，当时我觉得我有超强的自制力，能够克服所有困难。
+
+周四的晚上，和同事玩完麻将后，路上骑车被网约车给撞了。
+
+然后周五晚上的时候，由于吃鱼籽和酸奶，导致食物过敏，大晚上去市一医院输液半夜两点多，才回家。
+
+
+
+我是通过锻炼身体的方式加强了自制力，但并不代表我就能完全控制这具身体，我还是要尊重它的意志，对自己的身体好点，否则身体就会给你生场大病，告诉你谁才是主宰，脱离了这副躯壳，我的精神和意识也将不复存在。
+
+
+
+了解自制力何时会背叛你，尽可能多的为脆弱的环节做计划。
+
+
+
+## 第十一章 切合实际的乐观
+
+### 乐观的好处和局限性
+
+乐观的人，总能看到生活的光明一面，但也要警惕黑暗的一面。
+
+由于总是期待好的情况出现，所以对某些错误毫无抵抗能力。
+
+比如乐观主义者在输的一塌糊涂时，极有可能加大赌注，认为胜利就在下一把牌中等着他们。
+
+但是往往事与愿违，事情的发展规律不是以人的意志为转移的。
+
+
+
+而悲观主义者总是预料到最糟糕的结果，所以他们会为各种可能性做好准备。
+
+悲观者在连输几轮之后，便开始对自己赢钱不抱希望，因此退出游戏。
+
+
+
+心理学家把“如果。。。便会。。。”和“假如。。。才会。。。”的想法称作反事实思维。
+
+- **悲观的人**通常会想：“哎，要是我当时做得更好，现在就不会失败了。”
+   例如：“如果我早点开始复习，就能考得更好。”
+   这种想法虽然让人有点自责，但其实有好处。**因为它能帮你发现问题，为下次做得更好打基础。**你会更愿意总结经验教训，下次提前准备。
+
+------
+
+- **乐观的人**常常会想：“其实还好啦，要是我当时做得更糟，结果可能更惨。”
+   例如：“如果我连作业都没交，可能会被老师批评得更严重。”
+   这样想的好处是能让你心情好一些，感觉没那么失败。
+   **但缺点是，这样想不会真的帮你进步，因为你没有去反思如何做得更好。**
+
+
+
+最麻烦的一种乐观是“不切实际”的乐观（想当然的乐观，哈哈）
+
+怀着这种乐观精神的人不断给自己打气，相信自己会成功。其实是完全不愿意从客观的视角来看请事实。
+
+不切实际的乐观既没效果又危险，切合实际的乐观是实现目标的关键，怎么两者的区别是什么呢？
+
+一方面，当你认为自己能通过努力、计划和相应的策略对局面有所控制时，你的乐观是切合实际的。
+
+另一方面，当你的乐观来源于你控制范围之外的原因，比如运气好，比如比别人聪明，那么就是不切实际的乐观。
+
+（我会成功，因为我做事总是很顺。）
+
+
+
+### **让信心切合实际**
+
+如果你对实现目标有信心，但是不确定这种信心是不是切合实际，可以问自己几个问题：
+
+**1、问问自己为什么觉得你能做好**
+
+把心中的答案一条条的写下来，然后充分的思考你的优势。
+
+
+
+**2、其他人同样也有优势的可能性多大？**
+
+如果你觉得自己聪明就能应聘成功，那么是否还有其他聪明的人来应聘？他们是否比我还聪明？
+
+
+
+**3、现在想一想你怎么控制成功或失败**
+
+你能做什么来增加拿下面试的可能性？
+
+采取措施确保成功，这样才能确保拥有真实、现实、应有的乐观，帮助你展示最好的自己。
+
+
+
+乐观主义的危害
+
+**首先要记住，**当你追求防御型目标时，要避免乐观，当你最想避免损失时，你最好常常想着哪里会出错，以此来获取动力，而不要信心十足的告诉自己一切都会变好。
+
+
+
+**其次请记住，相信自己能成功与相信自己能轻易成功之间是有差距的。**
+
+觉得不费吹灰之力就能实现有价值、有意义的目标，这与客观事实是不相符的。
