1、如何达成目标.md 第十一章完结 2、uprobe技术的文档

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -1065,3 +1065,50 @@ Hungry、Angry、Lonely、Tired(HALT)
 **其次请记住，相信自己能成功与相信自己能轻易成功之间是有差距的。**
 
 觉得不费吹灰之力就能实现有价值、有意义的目标，这与客观事实是不相符的。
+
+
+
+### 增强乐观精神
+
+**第一、使用归因再培训方法**
+
+人们对成功的概率不确定，主要是怀疑他们自己的能力，这种想法可能是错觉。
+
+实现目标的过程中，勤奋、在逆境中坚持以及好的策略，会不会更重要呢？
+
+
+
+**第二、利用你过去的经历给自己增加信心**
+
+回想你面临的挑战以及克服这些挑战的策略。
+
+去年自己一个人从200斤减肥到140斤的过程，中间遇到困难我也咬牙坚持下来了。
+
+极大的增强了我的自信心和毅力，让我在工作中遇到挑战时，也能去勇敢的克服。
+
+
+
+**第三、运用“如果。。。那就。。。”的计划识别并战胜任何消极的想法。**
+
+比如：“如果做这件事我开始胆怯觉得做不好，那就告诉自己为什么可以胜任，我有哪些别人没有的优势等”。
+
+
+
+**第四、设想成功**
+
+在脑海中想象你要的东西，他就能成真。
+
+记住，想的是成功的方式和步骤，不是成功本身的光环。
+
+在脑海中模拟成功的过程，越具体越好，能让你更好的进行计划和做好准备。
+
+想象自己的每一步都走在成都道路上，很快你就会相信目标可以实现，而这个信念恰恰是正确的。
+
+
+
+## 第十二章 懂得坚持
+
+TODO:06-24
+
+
+
