1、记录每日体重 2、每日读书打卡

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -1108,7 +1108,46 @@ Hungry、Angry、Lonely、Tired(HALT)
 
 ## 第十二章 懂得坚持
 
-TODO:06-24
+### 怎样才能坚持不懈
+
+有韧性的人把成功看成是一场马拉松，他的优势就是持久耐劳。
+
+例如：“我曾经通过10多年的坚持不懈，每天看书，每天不断练习代码，跨行业在网络安全行业做到了技术大佬”。
 
 
+
+坚韧是个优秀品质，也可以被锻炼。
+
+#### 第一、选择特定类型的目标，能让你在追求过程中自然而然的变得更坚韧
+
+**1、谋求进步的目标**
+
+**核心：重点在于学习、成长、进步和进展**
+
+不在乎：不在意表现是否完美，别人怎么看待我。
+
+如何增强韧性：
+
+- 持续的成就感
+  - 即使离目标很远，每次小小的进步（解决了一个新问题，比昨天做的好一点），都能让你感受到成就感和满足感。
+- 培养乐观精神
+  - 因为你关注的是“进步”而非“完美失败”，遇到挫折时更容易将其视为学习和改进的机会，失败只是暂时的，这种心态会让你保持积极和希望。
+- 减少心理压力
+  - 不过分追求完美，也不奢求他人的认可，减轻了心理压力，让你更专注在过程本身。
+
+
+
+**2、自主选择的目标（内在动机目标）**
+
+核心：这类目标是你**真正发自内心想要的**，它源自你个人的兴趣、热情、价值观和真实愿望。
+
+你做这件事是因为你觉得它本身有意义、有趣、有价值，而不是为了取悦他人或仅仅为了奖励。
+
+如何增强韧性：
+
+- 更强的渴望：因为目标是“你的”，符合你的本心，你对其拥有更强烈的渴望和归属感，更想实现它。
+- 享受过程
+  - 在为目标奋斗的过程中，即使遇到困难，你也能体验到乐趣、满足感和意义感。你不会觉得付出只是痛苦的忍耐，而会觉得努力本身就有价值。
+- 过程即回报
+  - “你会像享受结果一样享受过程”。当过程本身充满乐趣和意义时，坚持就不再是纯粹的苦差事。过程中的收获也能支持你前行。
 
