如何达成目标.md

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -1151,3 +1151,24 @@ Hungry、Angry、Lonely、Tired(HALT)
 - 过程即回报
   - “你会像享受结果一样享受过程”。当过程本身充满乐趣和意义时，坚持就不再是纯粹的苦差事。过程中的收获也能支持你前行。
 
+#### 第二、增强韧性的方式是确保你正确的总结失败的原因
+
+令你表现不好，不是因为你能力低下，而是有很多方面你还没做到，还有很多方面需要努力。
+
+有时我们无法实现目标，不是因为我们不够聪明，而是缺少计划、坚持、努力以及适当的策略。
+
+
+
+当父母的，应该教给孩子怎么样去坚持，帮助他们理解成功到底需要些什么
+
+
+
+### 懂得何时放手
+
+放弃某个目标，有两个好的理由：
+
+1、人的精力有限，时间有限
+
+所以面对有限的资源，每个人都需要做出选择，选择一样事情就意味着放弃另一件事情。
+
+有时与其同时做很多事，不如给自已一丝喘息之机，认识到时间、精力是有限的，专注于重要的事情，放弃其他的。
