每日打卡内容提交

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -1172,3 +1172,17 @@ Hungry、Angry、Lonely、Tired(HALT)
 所以面对有限的资源，每个人都需要做出选择，选择一样事情就意味着放弃另一件事情。
 
 有时与其同时做很多事，不如给自已一丝喘息之机，认识到时间、精力是有限的，专注于重要的事情，放弃其他的。
+
+
+
+2、放弃某个目标的理由是代价太大
+
+聪明的做法是重新审视你的选择。
+
+
+
+### 当表现不尽人意时
+
+当你给出负面反馈时，注意一下几点：
+
+首先，要尽可能具体的指出问题所在，以免你和接受反馈着过于笼统的理解问题。在给人反馈时，不要说你的沟通技巧太差了，而应该告诉他们应该从哪些方面去改进（什么该说，什么不该说，怎么说等。）
