坚持每日精进的读书

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -1186,3 +1186,31 @@ Hungry、Angry、Lonely、Tired(HALT)
 当你给出负面反馈时，注意一下几点：
 
 首先，要尽可能具体的指出问题所在，以免你和接受反馈着过于笼统的理解问题。在给人反馈时，不要说你的沟通技巧太差了，而应该告诉他们应该从哪些方面去改进（什么该说，什么不该说，怎么说等。）
+
+
+
+还得记住一点，不太自信的人更容易误解负面反馈的含义。
+
+当我们觉得事情失控时，会导致心情不好；当我们觉得一切尽在掌握时，这种感觉会心情大好，并带来自信和乐观。
+
+所以当我们提出批评时，不要剥夺对方的事情的掌控感。
+
+研究表明，在努力没有带来相应的结果时，听到别人赞赏自己付出的辛劳，更会让人觉得是自己笨。
+
+这时不要说任何赞扬的话，而要把反馈的焦点集中在纯粹的信息上。比如：
+
+在哪些方面可以改进？
+
+努力但没成绩，会不会是方法需要改进下？
+
+更好的制订计划是否有帮助？
+
+
+
+当你的责任是给予反馈时，请你记住：帮助学生或员工找到改进的方法，和意识到哪里出错，是同样重要的。
+
+
+
+### 当表现的令人满意时
+
+TODO:2025-07-02
