每日读书/如何达成目标.md 记录体重和饮食

--- a/每日读书/如何达成目标.md
+++ b/每日读书/如何达成目标.md
@@ -1213,4 +1213,48 @@ Hungry、Angry、Lonely、Tired(HALT)
 
 ### 当表现的令人满意时
 
-TODO:2025-07-02
+基于以下五个准则才能产生积极的作用：
+
+**准则一：赞扬应该真诚**
+
+当你表扬人的热情过了头时，就会显得很虚伪。（你是我这辈子见过最聪明的人）
+
+赞美不宜过于笼统（比如你总是那么大方）。
+
+
+
+**准则二：尽可能赞美和强调对方的控制范围之内的因素**
+
+如果表扬别人天生的能力（比如聪明有天赋），如果下次做不好，他会怎么想？（我是不是不够聪明？在这方面我没有天赋等）
+
+反之，夸奖他的勤奋、毅力、策略和决心，会让他明白这些才是成功的关键。
+
+这样的话，他在遇到困难时才能迅速恢复并理性应对。
+
+
+
+我也承认，听到自己因为聪明智慧而获得别人的赞扬，比听到“你真努力”之类的赞扬，感觉要好很多。
+
+重点是避免单独对能力提出赞美，只要你还同时表扬了努力和得当的方法，那么称赞对方的能力就没有问题。
+
+
+
+**准则三：在表扬别人时，切勿把对方和他人做比较**
+
+和他人比较，容易使我们从能力的角度看成就，从而忽略了更可控的因素。例如勤奋和方法。
+
+表扬应该侧重于和自己比较，而不是和其他人比较。
+
+不如对比一个人目前和过去的表现。
+
+
+
+**准则四：表扬不应当剥夺对方的主观感受**
+
+当你的赞美之辞具有对事的针对性，试着尊重他人的感受和选择，支持他人的自主权。
+
+
+
+**准则五：表扬应当始终传达可达到的标准和期望值**
+
+记住，最好是鼓励学生或娃娃去树立有难度，但却仍然可能实现的目标。
