《只管去做》读书笔记

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -63,3 +63,57 @@
 
 
 # 第二章 让梦想照进现实
+
+## 2、1 你的梦想是不是忽略了什么
+
+怎么把愿景孵化为具体的目标呢？我的做法是用九宫格。
+
+![image-20250705224712028](./picture/image-20250705224712028.png)
+
+如何理解这个九宫格呢？
+
+在中间画一个人，人脚下踩着的是三个根基，包含健康、财务（钱）、社交。
+
+人左右手握着的是工作和生活的平很，两手抓，两手都要硬。
+
+人头顶上是三种享受，学习成长-》成长享受，体验突破-》愉悦享受，娱乐-》放松享受。
+
+
+
+**体验突破：**做一些以前从来没做过的事情，看看会发生什么。
+
+人生除了活得有意义，还要活得有意思。
+
+如果追求人生意义，每天都是在学习和工作中忙碌，给公司做贡献，更为了提升个人能力，人生难免太枯燥了。
+
+有意思：就是自己找点乐趣。
+
+
+
+**中间空白部分，填写年度主题词**
+
+可以随时提醒自己，整整一年就围绕这个主题词开展。
+
+
+
+九宫格法，能让人重新回到初心，这样就不会跑偏了。
+
+在实践九宫格方法时，在初期傻傻的去做就好。实践一段日子以后，再去衍生自己的方法，因为这些方法一定是有很多经验的沉淀的，不像看上去那么简单。
+
+
+
+## 2、2 三步把模糊的愿景孵化成明确的目标
+
+愿景可以是模糊的大方向，让我们知道往哪里走，并且充满动力就可以了。
+
+但目标一定是明确、具体、清晰的，否则就会容易犹豫和纠结。
+
+我使用的方法：
+
+- **先定义**
+- **再计划**
+- **后目标**
+
+
+
+## 2、3 检查一下年度目标是否合理
