检查下你的年度目标是否合理

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -104,9 +104,9 @@
 
 ## 2、2 三步把模糊的愿景孵化成明确的目标
 
-愿景可以是模糊的大方向，让我们知道往哪里走，并且充满动力就可以了。
+**愿景可以是模糊的大方向，让我们知道往哪里走，并且充满动力就可以了。**
 
-但目标一定是明确、具体、清晰的，否则就会容易犹豫和纠结。
+**但目标一定是明确、具体、清晰的，否则就会容易犹豫和纠结。**
 
 我使用的方法：
 
@@ -114,6 +114,66 @@
 - **再计划**
 - **后目标**
 
+很多人会问，做个年度计划有必要这么认真吗？
+
+认真的态度是一种面对。其实这个过程也是在确认你到底是不是真的想要。
+
+如果想要，你会很兴奋，因为这个过程让你的愿景更清晰。
+
+如果不想要，你则会不愿面对，那就放弃，省下实践和精力去做其他你真正想做的事情。
+
+大部分人年度计划半途而废不是因为毅力问题、坚持问题、时间问题，而是因为那些不是你自己真正想要的。
+
+
+
+当愿景转化微目标后，把这个目标用不同颜色的笔写下来，和愿景有区别就可以了。
+
+
+
+在十字路口，错误的选择是因为迷茫和纠结而原地不动。
+
+不管你往哪个方向走，都会看到不同的风景，有不同的收获。
+
+哪怕走了几步发现这条路行不通，也是一种收获啊。
+
+成功了，可以总结经验，失败了，可以总结教训。
+
+不管是路走的对不对，成功or失败，对自身都是提升的过程。
+
 
 
 ## 2、3 检查一下年度目标是否合理
+
+想象一个场景：
+
+刚制订年度计划时，信心满满，摩拳擦掌，等到真正开始做的时候，发现很多问题
+
+- 目标太多
+- 时间不足，没那么多时间
+- 没想清楚，不知道如何下手
+
+
+
+做两道题
+
+**第一道填空题时这样的：实现年度目标所需时间为__，一年中可支配时间为（）。**
+
+每天读书，15-30分钟，包括写读书笔记；
+
+每天编写个人代码，30分钟，包括提交代码到github上；
+
+按每天2小时算，一周14个小时，一年52周算，也就是728个小时，这是我所有拥有的可支配时间。
+
+
+
+第二道判断题是这样的：你的年度目标符合SMART原则吗？
+
+具体的（Specific）
+
+可衡量的（Measurable）
+
+可以达到的（Attainable）
+
+目标必须和其他目标具有相关性（Relevant）
+
+目标有明确的时间期限（Time-based）
