每日读书打卡 + 记录每日体重和饮食

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -154,6 +154,10 @@
 
 
 
+当我听你说既想要这个，又想要那个的时候，就察觉到你割裂了理想和现实，把自己的年度目标理想化了，没有考虑到现实问题。
+
+
+
 做两道题
 
 **第一道填空题时这样的：实现年度目标所需时间为__，一年中可支配时间为（）。**
@@ -168,12 +172,47 @@
 
 第二道判断题是这样的：你的年度目标符合SMART原则吗？
 
-具体的（Specific）
+- 具体的（Specific）
 
-可衡量的（Measurable）
+- 可衡量的（Measurable）
 
-可以达到的（Attainable）
+- 可以达到的（Attainable）
 
-目标必须和其他目标具有相关性（Relevant）
+- 目标必须和其他目标具有相关性（Relevant）
 
-目标有明确的时间期限（Time-based）
+- 目标有明确的时间期限（Time-based）
+
+这就是大名鼎鼎的SMART原则，在制订目标时要脚踏实地的使用起来它。
+
+
+
+“这个夏天要瘦20斤”，这个目标符合SMART原则吗？
+
+乍一看貌似比较符合，但是不能只看表面的东西，要多了解之后才能建立起实现目标的信心和决心。
+
+我为什么要减肥？
+
+1、我想变的更健康，身体更舒服
+
+2、我想延长我的职业寿命，我喜欢现在工作
+
+3、减肥让我的身材更好，做心里想做的事情时，就没有那么多后顾之忧了。
+
+
+
+我为什么要辛辛苦苦的练习手敲代码？尤其是有了AI辅助编程软件cursor后，为什么还是坚持练习手写代码呢？
+
+1、工程实践的核心能力要牢牢的掌握在程序员自己手中
+
+2、我之前被人瞧不起过，所以我要奋发图强，争口气；
+
+3、ai编写的代码，其质量还是不高，其稳定性也不高，还是需要程序员自身知道好代码是什么样的
+
+4、提升自己编写代码以及调试bug的能力
+
+
+
+# 第三章 抬头看路和低头走路
+
+
+
