每日读书/只管去做.md 记录每天体重和饮食

--- a/每日读书/只管去做.md
+++ b/每日读书/只管去做.md
@@ -172,15 +172,15 @@
 
 第二道判断题是这样的：你的年度目标符合SMART原则吗？
 
-- 具体的（Specific）
+- **具体的（Specific）**
 
-- 可衡量的（Measurable）
+- **可衡量的（Measurable）**
 
-- 可以达到的（Attainable）
+- **可以达到的（Attainable）**
 
-- 目标必须和其他目标具有相关性（Relevant）
+- **目标必须和其他目标具有相关性（Relevant）**
 
-- 目标有明确的时间期限（Time-based）
+- **目标有明确的时间期限（Time-based）**
 
 这就是大名鼎鼎的SMART原则，在制订目标时要脚踏实地的使用起来它。
 
@@ -214,5 +214,77 @@
 
 # 第三章 抬头看路和低头走路
 
+目标也分为项目类型的目标和习惯类型的目标。
+
+习惯：周期性做一件事，比如每周锻炼身体三天。
+
+培养习惯时容易遇到的挑战：
+
+- **三分钟热度**
+- **努力的坚持，但由于看不到结果而放弃**
+- **被打断一次，就灰心丧气，慢慢放弃了**
 
 
+
+项目：需要多个步骤来完成的事情
+
+计划项目时容易遇到的挑战是：
+
+- 总是拖到最后一刻才去做；
+- 专注细节，忽略了整体进度；
+- 多个项目同时进行，导致混乱
+
+
+
+现在，拿出你的九宫格，把属于习惯类型的目标用圆圈标出来，项目类型的目标用三角标出来。（已经标出来了）
+
+为什么有人同时做多个项目能游刃有余的搞定，并且平时也能有时间休闲和娱乐呢？其原因无非这几个：
+
+**1、受虐狂**
+
+明明知道自己需要更好的工作方法，或者学习新的项目管理方法，但是一想到学习就觉得累，就懒的行动。
+
+
+
+主动改变 vs 被动接受
+
+要不主动改变，要不只能被动接受，还在心里自我安慰，“我就这样，改变不了”。
+宁愿受虐也不愿意改变，反而合理化所受到的痛苦和小皮鞭。
+
+
+
+**2、选择困难**
+
+选择A还是选择B，时间就在纠结和比较中飞逝，而你一直在纠结中度过，还没有做任何事情。
+
+
+
+**3、极限生存**
+
+有些人总喜欢把事情推到最后一刻才去做，明明2个月的暑假作业，在最后两周才开始赶工，完成后还佩服自己真牛逼。
+
+
+
+如何解决这个问题呢？
+
+**低头走路 + 抬头看路**
+
+
+
+从“怎么做”的战术思考切换到“目的是什么”的战略思考，思考角度转变后，往往会有很大的收获。
+
+
+
+**甘特图：**
+
+看甘特图中的项目进度，就是在“抬头看路”
+
+
+
+**项目倒排清单：**
+
+搞定清单中的事项，就是在“低头走路”。
+
+
+
+需要我们经常在两者之间切换。
